<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Grammar Haja</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_rate">Rate This App</string>
    <string name="action_share">Share This App</string>
    <string name="learn_more">Learn More Korean</string>
    <string name="search_hint">Search grammars ...</string>
    <string name="list_view">List View</string>
    <string name="category_view">Category View</string>

</resources>
