<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:yourapp="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        yourapp:showAsAction="collapseActionView|always"
        android:title="@string/action_search"
        android:icon="@drawable/ic_action_search"
        yourapp:actionViewClass="android.support.v7.widget.SearchView"
        />

    <item
        android:id="@+id/change_view_style"
        yourapp:showAsAction="ifRoom"
        android:title="@string/category_view"
        android:icon="@drawable/ic_action_dashboard_view"
    />

    <item
        android:id="@+id/action_learn_more"
        yourapp:showAsAction="never"
        android:title="@string/learn_more"
    />

    <item
        android:id="@+id/action_share"
        yourapp:showAsAction="never"
        android:title="@string/action_share"/>
    <item
        android:id="@+id/action_rate"
        yourapp:showAsAction="never"
        android:title="@string/action_rate" />
</menu>